<resources>
    <string name="app">爱小器</string>
    <string name="login_loading">登陆中…</string>
    <string name="login_count">登录账号</string>
    <string name="login_psw">登录密码</string>
    <string name="login_check">登录验证码</string>
    <string name="cancel">取消</string>
    <string name="balance_rechange">账户余额不足</string>
    <string name="rechange">去充值</string>
    <string name="call_type">爱小器通话</string>
    <string name="search">搜索</string>
    <string name="no_data_show">---</string>
    <string name="null_verification">请输入验证码</string>
    <string name="verification_code">验证码：</string>
    <string name="input_verification">请输入验证码</string>
    <string name="regist">注册</string>
    <string name="user_registing">注册中</string>
    <string name="login_user">登录账号</string>
    <string name="login_password">登录密码</string>
    <string name="find_password">找回密码</string>
    <string name="regist_success">注册成功</string>
    <string name="readed">我已阅读</string>
    <string name="un_readed">未选中已阅读</string>
    <string name="agreement_mark">《用户许可及服务协议》</string>
    <string name="has_account_go_login"><u>有账号，直接登录\n</u></string>
    <string name="login">登录</string>
    <string name="phone">电话</string>
    <string name="index">商城</string>
    <string name="reset">重启</string>
    <string name="address_list">通讯录</string>
    <string name="sport">运动</string>
    <string name="personal_center">我的</string>
    <string name="personal_info">个人信息</string>
    <string name="no_sms">无短信记录</string>
    <string name="contact_personal_center">详情</string>
    <string name="exit">退出</string>
    <string name="sure">确认</string>
    <string name="forget_psw"><u>忘记密码,马上找回</u></string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_psw">请输入6–12位密码</string>
    <string name="dual_sim">双卡双待</string>
    <string name="dual_sim_standby_tutorial">双卡双待使用教程</string>
    <string name="standby_tutorial">使用教程</string>
    <string name="foreign_set">国外节费</string>
    <string name="device">设备</string>
    <string name="DSDS">双卡双待</string>
    <string name="purchased_package">已购套餐</string>
    <string name="hot_package">热门境外套餐</string>
    <string name="overseas_package">海外流量套餐</string>
    <string name="residue">剩余</string>
    <string name="more">更多</string>
    <string name="distace">距离</string>
    <string name="add_up">累计</string>
    <string name="deplete">消耗</string>
    <string name="sport_target">运动目标</string>
    <string name="step">步</string>
    <string name="kCal">千卡</string>
    <string name="day">天</string>
    <string name="daliy">日</string>
    <string name="balance">余额</string>
    <string name="edit">编辑</string>
    <string name="order_list">订单列表</string>
    <string name="my_pakages">我的套餐</string>
    <string name="my_device">我的设备</string>
    <string name="permission_set">权限管理</string>
    <string name="blue_connecting">蓝牙连接中…</string>
    <string name="international_flow_packet">国际流量套餐</string>
    <string name="bind_packet_giftcard">绑定套餐礼包卡</string>
    <string name="are_you_sure_exit_login">确定退出登陆吗？</string>
    <string name="are_you_sure_unbind">确定解除绑定吗？</string>
    <string name="lemobile_test_1_1">找到爱小器App，关闭开关</string>
    <string name="lemobile_test_2_1">找到爱小器App，打开对应开关</string>
    <string name="lemobile_test_3_1">点击下方更多的按钮弹出小框</string>
    <string name="lemobile_test_3_2">点击小框内高级按钮</string>
    <string name="lemobile_test_3_3">点击在休眠状态下保持WLAN连接，选择始终</string>
    <string name="oneplus_test1">点击下方高级按钮</string>
    <string name="oneplus_test2">点击在休眠状态下保持WLAN连接，选择始终</string>
    <string name="xiaomi_test_1_1">点击立即设置，打开已安装应用</string>
    <string name="xiaomi_test_1_2">找到爱小器APP</string>
    <string name="xiaomi_spirit_test_1_3">选择无限制</string>
    <string name="xiaomi_spirit_test_2_1">找到爱小器APP,点击打开</string>
    <string name="xiaomi_test_3_1">滑动到底部，可以看到高级设置，打开高级设置</string>
    <string name="xiaomi_test_3_2">点击在休眠状态下保持WLAN连接，选择始终</string>
    <string name="xiaomi_test3">在自启中，把爱小器开关打开</string>
    <string name="letv_test_1_1">打开wlan界面在下面有个更多按钮</string>
    <string name="letv_test_1_2">点击更多按钮会出现高级设置并点击</string>
    <string name="letv_test_1_3">点击在休眠状态下保持WLAN连接，选择始终</string>
    <string name="huawei_mate9_test_1_1">找到爱小器APP，打开开关</string>
    <string name="huawei_mate9_test_2_1">找到爱小器App，打开自启动开关</string>
    <string name="huawei_mateP8_test_3_1">点击下方的菜单按钮</string>
    <string name="huawei_mateP8_test_3_2">点击高级设置</string>
    <string name="huawei_mateP8_test_3_3">点击在休眠状态下保持WLAN连接，选择始终</string>
    <string name="huawei_mate9_test_3_1">点击下方的更多按钮，然后再点击高级设置按钮</string>
    <string name="huawei_mate9_test_3_2">把WLAN安全检测打开</string>
    <string name="gionee_test_1_1">点击应用管理</string>
    <string name="gionee_test_1_2">点击应用自启</string>
    <string name="gionee_test_1_3">把爱小器APP设置在应用自启列表里</string>
    <string name="gionee_test_2_1">在下方有一个更多按钮，点击会弹出一个小窗口</string>
    <string name="gionee_test_2_2">在弹小窗口中，点击高级按钮</string>
    <string name="gionee_test_2_3">点击在休眠状态下保持WLAN连接，选择始终</string>
    <string name="oppo_test_1_1">找到爱小器APP条目并且点击</string>
    <string name="oppo_test_1_2">分别关闭“后台冻结”和”检测到异常时自动优化“</string>
    <string name="oppo_test_2_1">开启“悬浮窗管理”开关</string>
    <string name="oppo_test_3_1">点击下方高级设置按钮</string>
    <string name="oppo_test_3_2">打开休眠状态下保持WLAN连接开关</string>
    <string name="oppoR7_test_1_1">找到爱小器APP对应的开关打开,开启自动启动管理</string>
    <string name="lenovo_test_1_0">打开WLAN开关</string>
    <string name="lenovo_test_1_1">点击下面三个小点弹出一个框,点击框内高级按钮</string>
    <string name="lenovo_test_1_2">点击在休眠状态下保持WLAN连接，选择始终</string>
    <string name="meizu_test_1_1">点击下方的省电模式按钮</string>
    <string name="meizu_test_1_2">点击下方的四方格组成的按钮</string>
    <string name="meizu_test_1_3">找到爱小器APP打开对应的开关</string>
    <string name="meizu_test_2_1">找到爱小器APP打自开启动对应的开关</string>
    <string name="meizu_test_3_1">点击上方的更多下拉框里面的高级按钮</string>
    <string name="meizu_test_3_2">关闭WLAN休眠开关</string>
    <string name="vivo_test_1_1">将爱小器对应的开关打开</string>
    <string name="vivo_test_2_1">打开WLAN，点击手机左下侧的菜单键，然后再点击高级设置</string>
    <string name="vivo_test_2_2">将休眠策略设置为永不休眠</string>
    <string name="samsung_test_1_1">点击内存按钮</string>
    <string name="samsung_test_1_2">点击自动运行应用程序列表找到爱小器APP，打开对应开关</string>
    <string name="samsung_test_2_1">点击上方更多按钮弹出小框，然后点击弹出框的高级设定选项</string>
    <string name="samsung_test_2_2">设置睡眠期间保持WLAN开启，选择始终连接</string>
    <string name="setting">设置</string>
    <string name="step_all">总共步行</string>
    <string name="order_detail">订单详情</string>
    <string name="activate_now">马上激活</string>
    <string name="find_bracelet">查找手环</string>
    <string name="firmware_version">固件版本</string>
    <string name="sim_indevice">设备内电话卡</string>
    <string name="remove_bind">解除绑定</string>
    <string name="ready_remove_bind">已解绑设备</string>
    <string name="remove_bind_under_line"><u>解绑</u></string>
    <string name="bracelet_mac">Mac地址</string>
    <string name="order_num">订单编号：</string>
    <string name="order_num_nocolon">订单编号</string>
    <string name="order_time">支付时间：</string>
    <string name="pay_way_myorder">支付方式：</string>
    <string name="all_price">总价：</string>
    <string name="price">价格</string>
    <string name="cancel_order">取消订单</string>
    <string name="contact_us">联系我们</string>
    <string name="agreement">用户许可及服务协议</string>
    <string name="app_version">APP版本号</string>
    <string name="conn_bluetooth">蓝牙未连接，点击开启</string>
    <string name="bluetooth_unopen">蓝牙未打开</string>
    <string name="wait_activite">稍后激活</string>
    <string name="aboard_how_to_use">出国后如何使用</string>
    <string name="inland_reset">回国后恢复设置</string>
    <string name="message_history">短信记录</string>
    <string name="message">短信</string>
    <string name="message_record">短信记录</string>
    <string name="active">活动</string>
    <string name="km">公里</string>
    <string name="m">米</string>
    <string name="minute">分钟</string>
    <string name="hour_single">时</string>
    <string name="edit_head">修改头像</string>
    <string name="head">头像</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birthday">出生年月</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="stature">身高</string>
    <string name="weight">体重</string>
    <string name="motion_target">运动目标</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="BMI">BMI</string>
    <string name="album">相册选择</string>
    <string name="take_a_picture">拍照</string>
    <string name="upgrade">升级</string>
    <string name="expireday">有效天数：</string>
    <string name="product_characteristics">产品特色</string>
    <string name="package_detail">通话套餐详情</string>
    <string name="payment_term">支付条款</string>
    <string name="unset_name">未设置名字</string>
    <string name="how_to_use">使用简介</string>
    <string name="country_no_data">我们正在努力为您准备更优质的\n资源服务中，敬请期待。</string>
    <string name="searching_wrist_strap">正在搜索周围手环</string>
    <string name="please_close_to_the_phone">当设备震动时，请点击确认绑定</string>
    <string name="please_makesure_bind">当设备亮灯闪烁时，请点击确认绑定</string>
    <string name="package_market">套餐超市</string>
    <string name="loading_data">正在加载中...</string>
    <string name="no_more_content">没有更多内容</string>
    <string name="delete_contact">删除联系人</string>
    <string name="delete_contact_hide">确定删除联系人</string>
    <string name="title_search_result_not_found">未知</string>
    <string name="find_new_package">(有套餐可激活)</string>
    <string name="find_new_version">(有新版本)</string>
    <string name="quiet">静音</string>
    <string name="connect_us">联系我们</string>
    <string name="customer_service_time">售后客服时间 7x24小时</string>
    <string name="web_of_service">service@unitoys.com</string>
    <string name="service_phone">0755–29988454</string>
    <string name="weixin">微信公众号:爱小器</string>
    <string name="user_feedback">用户反馈</string>
    <string name="write_your_advice">请写下您的建议(不少于10字，不多于500字)</string>
    <string name="no_wifi">当前网路不可用，请检查你的网络设置</string>
    <string name="no_net">网络连接失败，点击</string>
    <string name="retry">重试</string>
    <string name="last_version">固件已经是最新的版本</string>
    <string name="recycler_view_header_hint_normal">下拉刷新</string>
    <string name="recycler_view_header_hint_release">释放立即刷新</string>
    <string name="recycler_view_loading">正在加载…</string>
    <string name="refreshing">正在刷新…</string>
    <string name="refresh_done">刷新完成</string>
    <string name="recycler_view_header_last_time">上次更新时间：</string>
    <string name="detail_info">详细信息</string>
    <string name="consignee">收件人 ：</string>
    <string name="t9_1">1<font size='10'>&#160;&#160;&#160;&#160;</font></string>
    <string name="t9_2">2<font size='10'>ABC</font></string>
    <string name="t9_3">3<font size='10'>DEF</font></string>
    <string name="t9_4">4<font size='10'>GHI</font></string>
    <string name="t9_5">5<font size='10'>JKL</font></string>
    <string name="t9_6">6<font size='10'>MNO</font></string>
    <string name="t9_7">7<font size='10'>PQRS</font></string>
    <string name="t9_8">8<font size='10'>TUV</font></string>
    <string name="t9_9">9<font size='10'>WXYZ</font></string>
    <string name="t9_10">*</string>
    <string name="t9_11">0</string>
    <string name="t9_12">#</string>
    <string name="index_unbind">未绑定</string>
    <string name="index_un_insert_card">未插卡</string>
    <string name="auto_start">自启动</string>
    <string name="background_start">受保护应用</string>
    <string name="trust_app">信任应用</string>
    <string name="going_activate">去激活</string>
    <string name="no_remind_today">今日不再提醒</string>
    <string name="used_freeforworry_tips">推荐使用爱小器0元话费体验包，向高额话费说拜拜</string>
    <string name="to_get">去领取</string>
    <string name="next_time">下次</string>
    <string name="connect_statue">设备</string>
    <string name="phone_title">爱小器卡已放入手机中</string>
    <string name="equipment_title">爱小器卡已放入设备中</string>
    <string name="phone_tip">已放入手机请前往激活</string>
    <string name="equipment_tip">请查看设备的相关状态前往激活</string>
    <string name="insert_cart_statue">设备中爱小器卡</string>
</resources>