<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/auto_start"
        android:layout_width="wrap_content"
        android:background="@drawable/left_sms"
        android:text="@string/auto_start"
        android:layout_marginTop="@dimen/padding_15dp"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/background_start"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/padding_15dp"
        android:background="@drawable/left_sms"
        android:text="@string/background_start"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/trust_app"
        android:layout_width="wrap_content"
        android:background="@drawable/left_sms"
        android:layout_marginTop="@dimen/padding_15dp"
        android:text="@string/trust_app"
        android:layout_height="wrap_content" />
</LinearLayout>