<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/search_et_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bottom_bar"
        android:gravity="center_vertical"
        android:minHeight="@dimen/dialpad_row_height"
        android:orientation="horizontal"
        android:visibility="visible">


        <Button
            android:id="@+id/telephone_dial_close_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone" />


        <EditText
            android:id="@+id/dial_input_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:inputType="phone"
            android:textSize="@dimen/little_22"
            android:padding="@dimen/padding" />


        <TextView
            android:id="@+id/dial_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/deletenumber_selector"
            android:gravity="center"
            android:paddingRight="@dimen/padding_15dp"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:id="@+id/line1"
        style="@style/horizontal_line_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialNum1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="1"
            android:text="@string/t9_1"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line2"
            style="@style/vertical_line_view" />

        <Button
            android:id="@+id/dialNum2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="2"
            android:text="@string/t9_2"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line3"
            style="@style/vertical_line_view" />


        <Button
            android:id="@+id/dialNum3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/click_phone_key_selector"
            android:tag="3"
            android:textColor="@color/red_background_text_selector"
            android:text="@string/t9_3"
            android:textSize="@dimen/little_22" />
    </LinearLayout>

    <View
        android:id="@+id/line4"
        style="@style/horizontal_line_view_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialNum4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="4"
            android:text="@string/t9_4"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line5"
            style="@style/vertical_line_view" />

        <Button
            android:id="@+id/dialNum5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="5"
            android:text="@string/t9_5"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line6"
            style="@style/vertical_line_view" />

        <Button
            android:id="@+id/dialNum6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="6"
            android:text="@string/t9_6"
            android:textSize="@dimen/little_22" />
    </LinearLayout>

    <View
        android:id="@+id/line7"
        style="@style/horizontal_line_view_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialNum7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="7"
            android:text="@string/t9_7"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line8"
            style="@style/vertical_line_view" />

        <Button
            android:id="@+id/dialNum8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="8"
            android:text="@string/t9_8"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line9"
            style="@style/vertical_line_view" />

        <Button
            android:id="@+id/dialNum9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="9"
            android:text="@string/t9_9"
            android:textSize="@dimen/little_22" />
    </LinearLayout>

    <View
        android:id="@+id/line10"
        style="@style/horizontal_line_view_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_60dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialx"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="*"
            android:text="@string/t9_10"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line11"
            style="@style/vertical_line_view" />

        <Button
            android:id="@+id/dialNum0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="0"
            android:text="@string/t9_11"
            android:textSize="@dimen/little_22" />

        <View
            android:id="@+id/line12"
            style="@style/vertical_line_view" />

        <Button
            android:id="@+id/dialj"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/red_background_text_selector"
            android:background="@drawable/click_phone_key_selector"
            android:tag="#"
            android:text="@string/t9_12"
            android:textSize="@dimen/little_22" />
    </LinearLayout>

    <View
        android:id="@+id/line13"
        style="@style/horizontal_line_view_gray" />

</LinearLayout>