<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/padding_35dp"
        android:src="@drawable/login_icon" />


    <EditText
        android:id="@+id/phoneNumberEdit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@+id/logo"
        android:background="@color/white"
        android:gravity="center_vertical|bottom"
        android:hint="@string/input_phone"
        android:inputType="phone"
        android:paddingBottom="@dimen/padding_10dp"
        android:paddingLeft="@dimen/padding_25dp"
        android:textColor="@color/color_323232"
        android:textColorHint="@color/color_323232"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textview_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/phoneNumberEdit"
        android:layout_marginLeft="@dimen/padding_25dp"
        android:paddingTop="@dimen/padding_15dp"
        android:gravity="center_vertical"
        android:text="@string/login_count"
        android:textColor="@color/color_cccccc"
        android:textSize="14sp"
        android:visibility="gone" />

    <View
        android:id="@+id/line1"
        style="@style/horizontal_line_margin_15dp"
        android:layout_below="@id/phoneNumberEdit"
       />


    <EditText
        android:id="@+id/verification_edit"
        style="@style/rg_edittext"
        android:layout_below="@id/line1"
        android:hint="@string/input_verification"
        android:inputType="number" />

    <TextView
        android:paddingTop="@dimen/padding_10dp"
        android:id="@+id/textview_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line1"
        android:layout_marginLeft="@dimen/padding_25dp"
        android:gravity="center_vertical"
        android:text="@string/login_check"
        android:textColor="@color/color_cccccc"
        android:textSize="14sp"
        android:visibility="gone" />


    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/send_sms_selector"
        android:layout_marginTop="@dimen/padding_20dp"
        android:gravity="center"
        android:text="发送验证码"
        android:textColor="@drawable/regist_sendsms_textcolor_selector"
        android:textSize="12dp"
        android:layout_below="@+id/line1"
        android:layout_alignEnd="@+id/line1" />


    <View
        android:id="@+id/line2"
        style="@style/horizontal_line_margin_15dp"
        android:layout_below="@id/verification_edit" />


    <EditText
        android:id="@+id/passwordEdit"
        style="@style/rg_edittext"
        android:layout_below="@id/line2"
        android:hint="@string/input_psw"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textview_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line2"
        android:layout_marginLeft="@dimen/padding_25dp"
        android:paddingTop="@dimen/padding_10dp"
        android:gravity="center_vertical"
        android:text="@string/login_psw"
        android:textColor="@color/color_cccccc"
        android:textSize="14sp"
        android:visibility="gone" />


    <View
        android:id="@+id/line3"
        style="@style/horizontal_line_margin_15dp"
        android:layout_below="@id/passwordEdit" />

</RelativeLayout>
